调整显示预览界面的长宽比，可正确显示在Galaxy S4下。

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,8 +6,8 @@
               android:background="#ffab0d">
     <SurfaceView
             android:id="@+id/surfaceView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="1080px"
+            android:layout_height="1440px"
             />
 </LinearLayout>
 
